[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pad-earthwork-planner"
version = "0.1.0"
description = "Pad earthwork volume planner API (flat terrain MVP)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "rasterio>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pad_earthwork"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
