[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "well-trajectory-planner"
version = "0.1.0"
description = "Well trajectory design API (welleng + PyWellGeo)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "welleng>=0.11",
    "pywellgeo",
    "pythermonomics",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/well_trajectory"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "pywellgeo: tests requiring pywellgeo package",
]
